[gd_scene load_steps=53 format=3 uid="uid://cy6jwk7fyyfh6"]

[ext_resource type="Texture2D" uid="uid://dvhh6qsj10be3" path="res://assets/Characters/Slime/Slime/Slime-Death.png" id="1_6yd5t"]
[ext_resource type="Script" path="res://slime.gd" id="1_icm18"]
[ext_resource type="Texture2D" uid="uid://chs36kwb4lq7o" path="res://assets/Characters/Slime/Slime/Slime-Attack01.png" id="2_wj3s2"]
[ext_resource type="Texture2D" uid="uid://cfqdj4yodnik1" path="res://assets/Characters/Slime/Slime/Slime-Idle.png" id="3_5eoem"]
[ext_resource type="Texture2D" uid="uid://d2v33bpgviyeg" path="res://assets/Characters/Slime/Slime/Slime-Attack02.png" id="3_tkogu"]
[ext_resource type="Texture2D" uid="uid://b7qwjxjexcyw3" path="res://assets/Characters/Slime/Slime/Slime-Hurt.png" id="4_2hci4"]
[ext_resource type="Texture2D" uid="uid://c4dde27dyeexd" path="res://assets/Characters/Slime/Slime/Slime-Walk.png" id="4_uvbeb"]
[ext_resource type="Script" path="res://animated_sprite_2d.gd" id="5_knd80"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pomrd"]
radius = 2.0
height = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sxdvi"]
atlas = ExtResource("1_6yd5t")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1uv4"]
atlas = ExtResource("1_6yd5t")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5uy8"]
atlas = ExtResource("1_6yd5t")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2ng3"]
atlas = ExtResource("1_6yd5t")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhhx"]
atlas = ExtResource("3_tkogu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mnst"]
atlas = ExtResource("3_tkogu")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jheqt"]
atlas = ExtResource("3_tkogu")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x2mc"]
atlas = ExtResource("3_tkogu")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1rdk"]
atlas = ExtResource("3_tkogu")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ioml"]
atlas = ExtResource("3_tkogu")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjgqy"]
atlas = ExtResource("3_tkogu")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6xub"]
atlas = ExtResource("3_tkogu")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j37pl"]
atlas = ExtResource("3_tkogu")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2345w"]
atlas = ExtResource("3_tkogu")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4urpr"]
atlas = ExtResource("3_tkogu")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_psdol"]
atlas = ExtResource("3_tkogu")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm47y"]
atlas = ExtResource("2_wj3s2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhtqn"]
atlas = ExtResource("2_wj3s2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kto2x"]
atlas = ExtResource("2_wj3s2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtetn"]
atlas = ExtResource("2_wj3s2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8n4t"]
atlas = ExtResource("2_wj3s2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h8js"]
atlas = ExtResource("2_wj3s2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ohr4"]
atlas = ExtResource("4_2hci4")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_syg5w"]
atlas = ExtResource("4_2hci4")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vala7"]
atlas = ExtResource("4_2hci4")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axhiq"]
atlas = ExtResource("4_2hci4")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0outg"]
atlas = ExtResource("3_5eoem")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc6tn"]
atlas = ExtResource("3_5eoem")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_asfc6"]
atlas = ExtResource("3_5eoem")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyao6"]
atlas = ExtResource("3_5eoem")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1rt4"]
atlas = ExtResource("3_5eoem")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy3vg"]
atlas = ExtResource("3_5eoem")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kkc5"]
atlas = ExtResource("4_uvbeb")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8twm2"]
atlas = ExtResource("4_uvbeb")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_shd5k"]
atlas = ExtResource("4_uvbeb")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6riv"]
atlas = ExtResource("4_uvbeb")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8ccb"]
atlas = ExtResource("4_uvbeb")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfswu"]
atlas = ExtResource("4_uvbeb")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_38ovg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxdvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1uv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5uy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2ng3")
}],
"loop": false,
"name": &"slime_die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mnst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jheqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x2mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1rdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ioml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjgqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6xub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j37pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2345w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4urpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psdol")
}],
"loop": false,
"name": &"slime_heavy_hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm47y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhtqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kto2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtetn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8n4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h8js")
}],
"loop": false,
"name": &"slime_hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ohr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syg5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vala7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axhiq")
}],
"loop": false,
"name": &"slime_hurt",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0outg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc6tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asfc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyao6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1rt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy3vg")
}],
"loop": true,
"name": &"slime_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kkc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8twm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shd5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6riv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8ccb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfswu")
}],
"loop": true,
"name": &"slime_walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2m44"]
radius = 137.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2qpu"]
radius = 30.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_caroh"]
radius = 1.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md4jr"]
radius = 14.0
height = 42.0

[node name="Slime" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_icm18")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pomrd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_38ovg")
animation = &"slime_heavy_hit"
autoplay = "slime_idle"
script = ExtResource("5_knd80")

[node name="AttentionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttentionRange"]
shape = SubResource("CircleShape2D_u2m44")
debug_color = Color(0.778927, 0, 0.085826, 0)

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18, -1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_i2qpu")
debug_color = Color(0.913725, 0.294118, 0, 0.168627)

[node name="PlayerTargetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTargetArea"]
position = Vector2(14, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_caroh")
debug_color = Color(0.823246, 0.397943, 0, 1)

[node name="HeavyAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeavyAttackArea"]
position = Vector2(29, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_md4jr")
debug_color = Color(0.945776, 0.232883, 1.92523e-07, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
